1999-06-23  Jason L Tibbitts III  <tibbs@math.uh.edu>

	* lib/Mj/Resend.pm (_check_header): Add a log statement.
	(_check_poster): Ditto.

Sun Jun 20 13:34:52 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* setup/mta_qmail.pl (setup_qmail_domain): Write out $whoami
 	argument to -Q in .qmail-default files.

	* bin/mj_enqueue: Make -Q take $whoami for this domain as an
 	argument so 'majordomo' isn't hardcoded.

	* bin/mj_email: ditto.

	* bin/mj_queueserv: Sed $SIG{CHLD} based on the value of
 	$::SIG_CHLD_IGNORE.

	* installbin: Substitute $::SIG_CHLD_IGNORE.

	* setup/setup_func.pl (do_site_config): Just put all info from all
 	available MTAs into the config; it can't hurt to be there and
 	eliminates the possibility of making some stupid errors.

	* setup/query_util.pl (get_file): Fix some dumb logic errors;
 	comment better.

	* setup/ask_basic.pl: Completely restructure MTA configuration
 	sections.

	* lib/Mj/MailOut.pm (deliver): Get the sender separator out of the
 	site config instead of hardcoded constants in MTAConfig.pm.

	* lib/Mj/MTAConfig.pm: Add Exim support; remove %sendsep
 	completely (since it's now configurable at install time).

	* bin/mj_queueserv (in): Handle the case of select returning -1;
 	previously we moved into the accept and blocked forever.

Sat Jun 19 13:15:35 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* setup/setup_func.pl (mta_setup): Restructure a bit; handle
 	making mj-domains file.

	* postinstall: Don't skip MTA configuration if not running on a
 	terminal.
	Rework MTA setup a bit.

Fri Jun 18 23:18:20 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/Access.pm (_a_confirm): Hack to get unspooled filename
 	into Token::confirm.

	* lib/Mj/Resend.pm (post): Ditto.

	* lib/Mj/Token.pm (consult): Ditto.

Wed Jun  9 23:45:16 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* setup/install_util.pl (safe_mkdir): Always make sure that the